SERVER-21498 Fix stats reporting of losing plans.

Ensures fields such as 'saveState' and 'restoreState' contained in the
'allPlansExecution' section reflect the statistics captured during the
trial period, not the execution period.